--- a/style.css
+++ b/style.css
@@ -1,47 +1,37 @@
-*{
-    box-sizing: border-box;
-}
-body{
-    background: #2d2013;
-    color: #fff;
-    margin: 0;
-}
-.container{
-    margin: auto;
-    max-width: 800px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-.flex{
-    margin-top: 100px;
-    display: flex;
-}
-input[type="text"]{
-    width: 300px;
-}
-.search-btn{
-    cursor: pointer;
-}
-.meals{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-gap: 20px;
-    margin-top: 20px;
-}
-.meal{
-    cursor: pointer;
-    position: relative;
+.mealDetailInfo img{
+    width: 250px;
     height: 180px;
-    width: 180px;
-    text-align: center;
+    border-radius: 7px;
 }
-.meal img{
-    width: 100%;
-    height: 100%;
-    border: 4px #fff solid;
-    border-radius: 2px;
+
+#mealContainer{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 20px;
+}
+.mealDetailInfo{
+    margin: 25px;
+    padding: 25px;
+    width: 430px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    
+}
+
+.mealDetailInfo h2{
+    margin-top: 10px;
+}
+.mealItemList{
+    border: 1px solid rgb(247, 244, 239);
+    border-radius: 20px;
+    text-align: center;
+    width: 201px;
+    background-color: rgba(228, 227, 227, 0.822);
+}
+.mealItemList img {
+    width: 180px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
 }
 
